2010-03-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	For NB#157265.

	* matchbox/core/mb-window-manager.c (mb_wm_unmanage_client):
	  Do restack even if an override-redirected window is being
	  unmanaged because its fullscreenness might have influenced
	  the composit manager.

2010-02-24  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.89

2010-02-24  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#158114 - When starting device with beta theme, menu borders are 
	            from devel theme
	            
	* matchbox/theme-engines/mb-wm-theme.c: Remove prepending of theme
	path, as sometimes it points to the wrong theme. Hildon-desktop
	can then use the path relative to the *current* theme.

2010-02-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Bug 157390 - Regression: application menu borders missing

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Tune hard-codings.

2010-02-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.88

2010-02-22  Gordon Williams <gordon.williams@collabora.co.uk>

	* matchbox/client-types/mb-wm-client-menu.c:
	Make sure that menus always stay fully on the screen. Only apply this
	for MBWMClientMenu types though, so we don't mess up positioning of
	HdAppMenu.

2010-02-19  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-window-manager.c,
	matchbox/core/mb-wm-client-window.c, matchbox/core/mb-wm-atoms.c: Add
	support for new property _HILDON_LIVE_DESKTOP_BACKGROUND.

2010-02-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c (mb_wm_sync)
	* matchbox/core/mb-wm-main-context.c
	(mb_wm_list_remove_deleted_handlers):
	  Removed some g_debug()s.

2010-02-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.87

2010-02-01  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#137235 - Transparent menu corners

	* matchbox/client-types/mb-wm-client-menu.c: Create decor for menus, 